# thijsfranck

./: LICENSE  README.md  nx.json  package-lock.json  package.json  pyproject.toml  release.config.js  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish.yml
.husky/: pre-commit
libs/ngx-sse-backend/: .eslintrc.json  README.md  jest.config.ts  ng-package.json  package.json  project.json  release.config.js
libs/ngx-sse-backend/src/: index.ts
libs/ngx-sse-backend/src/lib/: sse-backend.service.spec.ts  sse-backend.service.ts
