[tool.nx]
autoActivate = true

[tool.poetry]
name = "@thijsfranck/source"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.5"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
